location area top gap fixing between top driver

--- a/Css/responsive.css
+++ b/Css/responsive.css
@@ -95,6 +95,7 @@
     /* location area   */
     #location__area{
         height: 500px;
+        margin-top: -550px;
          .location__content{
             flex-direction: column;
             gap:50px;
